--- a/app/globals.css
+++ b/app/globals.css
@@ -280,6 +280,7 @@ nav a.active {
   animation: fadeIn 0.5s;
   cursor: pointer;
   border-radius: 10px;
+  color: var(--text-color-dark);
 }
 
 .post-card:hover {
