--- a/app/globals.css
+++ b/app/globals.css
@@ -298,7 +298,6 @@ nav a.active {
   background-color: var(--white);
   transition: 0.5s;
   animation: fadeIn 0.5s;
-  cursor: pointer;
   border-radius: 10px;
   color: var(--text-color-dark);
 }
@@ -377,7 +376,7 @@ nav a.active {
 }
 
 .image-preview {
-  cursor: pointer;
+  /* cursor: pointer; */
   width: 100%;
   height: auto;
 }
